K8s/traefik-cert-manager/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - name: http
      targetPort: 80
      port: 80
